# ChangeLog for dev-ruby/actionview
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionview/ChangeLog,v 1.24 2015/06/16 21:58:27 graaff Exp $

*actionview-4.2.2 (16 Jun 2015)

  16 Jun 2015; Hans de Graaff <graaff@gentoo.org> +actionview-4.2.2.ebuild:
  Version bump.

*actionview-4.1.11 (16 Jun 2015)

  16 Jun 2015; Hans de Graaff <graaff@gentoo.org> +actionview-4.1.11.ebuild:
  Version bump.

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

  24 May 2015; Hans de Graaff <graaff@gentoo.org> -actionview-4.1.8.ebuild,
  -actionview-4.1.9.ebuild, -actionview-4.2.0.ebuild:
  Cleanup.

*actionview-4.2.1 (19 Mar 2015)
*actionview-4.1.10 (19 Mar 2015)

  19 Mar 2015; Hans de Graaff <graaff@gentoo.org> +actionview-4.1.10.ebuild,
  +actionview-4.2.1.ebuild:
  Version bump.

  08 Jan 2015; Markus Meier <maekke@gentoo.org> actionview-4.2.0.ebuild:
  add ~arm, bug #534186

*actionview-4.1.9 (07 Jan 2015)

  07 Jan 2015; Hans de Graaff <graaff@gentoo.org> +actionview-4.1.9.ebuild:
  Version bumps.

  01 Jan 2015; Agostino Sarubbo <ago@gentoo.org> actionview-4.2.0.ebuild:
  Stable for ~ppc64, wrt bug #534186

  01 Jan 2015; Agostino Sarubbo <ago@gentoo.org> actionview-4.2.0.ebuild:
  Stable for ~ppc, wrt bug #534186

*actionview-4.2.0 (01 Jan 2015)

  01 Jan 2015; Hans de Graaff <graaff@gentoo.org> +actionview-4.2.0.ebuild:
  Version bump for Rails 4.2. Dropped keywords tracked in bug 534186.

  20 Dec 2014; Hans de Graaff <graaff@gentoo.org> -actionview-4.1.7.ebuild:
  Cleanup of vulnerable versions.

*actionview-4.1.8 (17 Nov 2014)

  17 Nov 2014; Hans de Graaff <graaff@gentoo.org> +actionview-4.1.8.ebuild:
  Version bump for security bug 529635.

  07 Nov 2014; Hans de Graaff <graaff@gentoo.org> -actionview-4.1.5.ebuild,
  -actionview-4.1.6.ebuild:
  Remove vulnerable versions.

*actionview-4.1.7 (31 Oct 2014)
